[gd_scene load_steps=5 format=3 uid="uid://cey47tk3hpfsb"]

[ext_resource type="Script" path="res://Scrap/scrap_pile.gd" id="1_2mjx3"]
[ext_resource type="Texture2D" uid="uid://yu6x3xjp03hm" path="res://Icons/stone-pile.png" id="2_8p554"]
[ext_resource type="PackedScene" uid="uid://dvedc3e4k78n5" path="res://Goblins/scrap_pile_goblin.tscn" id="2_wxjp3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3u0b"]
size = Vector2(128, 128)

[node name="ScrapPile" type="Node2D" groups=["scrap_pile"]]
script = ExtResource("1_2mjx3")
scrap_heap_goblin_scene = ExtResource("2_wxjp3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8p554")

[node name="ClickableArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableArea2D"]
shape = SubResource("RectangleShape2D_w3u0b")

[node name="ScrapCollectingPanel" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
offset_left = -125.0
offset_top = -106.0
offset_right = 125.0
offset_bottom = -66.0

[node name="NumberOfGoblinsLabel" type="Label" parent="ScrapCollectingPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -11.5
offset_right = 104.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "10 Goblins Collecting Scrap"
horizontal_alignment = 1

[node name="ScrapInPilePanel" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
offset_left = -125.0
offset_top = 67.0
offset_right = 125.0
offset_bottom = 107.0

[node name="ScrapInPileLabel" type="Label" parent="ScrapInPilePanel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 20.5
offset_right = 229.5
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
text = "150000 scrap in pile"
horizontal_alignment = 1

[node name="BuyScrapButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = -93.5
offset_top = 115.0
offset_right = 92.5
offset_bottom = 146.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Buy 100 Scrap (10 gold)"

[node name="CollectScrapTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="GoblinLayer" type="Node2D" parent="."]
position = Vector2(100, 0)
